[LayoutNG] Propagate abspos inline container

OOF elements with inline container that were not direct descendants
of container did not have their inline container set correctly.
This caused Google SERP page to display a menu incorrectly.

Test

Bug: 867307
Cq-Include-Trybots: luci.chromium.try:linux_layout_tests_layout_ng
Change-Id: Iefc78785d296c87d7fc1f34abe3980c0783d6818
Reviewed-on: https://chromium-review.googlesource.com/1165953
Commit-Queue: Aleks Totic <atotic@chromium.org>
Reviewed-by: Koji Ishii <kojii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#582139}
Former-commit-id: b883f43214379b84ebcc01d911a2acd821634014