third_party/blink/renderer/core/layout/ng/ng_out_of_flow_positioned_descendant.h
@@ -25,11 +25,11 @@ namespace blink {
 struct CORE_EXPORT NGOutOfFlowPositionedDescendant {
   NGBlockNode node;
   NGStaticPosition static_position;
-  LayoutObject* inline_container;
+  const LayoutObject* inline_container;
   NGOutOfFlowPositionedDescendant(
       NGBlockNode node_param,
       NGStaticPosition static_position_param,
-      LayoutObject* inline_container_param = nullptr)
+      const LayoutObject* inline_container_param = nullptr)
       : node(node_param),
         static_position(static_position_param),
         inline_container(inline_container_param) {}
